project second commit

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                             Our Trading Bots are performance-verified, working 24/7 to deliver better returns than
                             classic investing methods.
                         </p>
-                        <a href="#" class="call-to-action">See our intro video <i class="fas fa-play play-icon"></i></a>
+                        <a href="#" class="call-to-action">See our intro video <i class="fas fa-play play-icon"></i>
+                        </a>
                         <button class="btn btn-style" type="submit">
                             <span class="btn-text">Try Shaman Trends for free</span>
                         </button>
@@ -130,18 +131,22 @@
                     <h6>The Risk</h6>
                     <h2>Trading on your own is Challenging</h2>
 
-                    <p>
+                    <p class="d-flex align-items-center">
                         <i class="fa fa-times window-close-icon" aria-hidden="true"></i>
                         Cryptocurrencies are extremely volatile.
                     </p>
-                    <p><i class="fa fa-times window-close-icon" aria-hidden="true"></i>“Buy and Hold" investing
+                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                            aria-hidden="true"></i>“Buy and Hold" investing
                         strategies lead to major portfolio
                         crashes over time.</p>
-                    <p><i class="fa fa-times window-close-icon" aria-hidden="true"></i>Trading is a skill that takes
+                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                            aria-hidden="true"></i>Trading is a skill that takes
                         years to master.</p>
-                    <p><i class="fa fa-times window-close-icon" aria-hidden="true"></i>Human emotions get in the way of
+                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                            aria-hidden="true"></i>Human emotions get in the way of
                         consistent performance.</p>
-                    <p><i class="fa fa-times window-close-icon" aria-hidden="true"></i>Current Trading Robot options are
+                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                            aria-hidden="true"></i>Current Trading Robot options are
                         hard to operate and understand
                         without a tech background.</p>
 
@@ -159,16 +164,21 @@
                     <h6>Our benefits</h6>
                     <h2>Automated Crypto Trading for Everyone</h2>
 
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Cryptocurrencies are extremely volatile.
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Cryptocurrencies are extremely volatile.
                     </p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>“Buy and Hold" investing strategies lead
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>“Buy
+                        and Hold" investing strategies lead
                         to major portfolio
                         crashes over time.</p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Trading is a skill that takes years to
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Trading is a skill that takes years to
                         master.</p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Human emotions get in the way of
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>Human
+                        emotions get in the way of
                         consistent performance.</p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Current Trading Robot options are hard
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Current Trading Robot options are hard
                         to operate and understand
                         without a tech background.</p>
                     <button class="btn btn-style btn-style-for-mobile" type="submit">
@@ -188,19 +198,24 @@
                 <div class="col-md-8">
                     <h2>How Shaman Trends Works</h2>
 
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Cryptocurrencies are extremely
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Cryptocurrencies are extremely
                         volatile.
                     </p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>“Buy and Hold" investing strategies
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>“Buy
+                        and Hold" investing strategies
                         lead
                         to major portfolio
                         crashes over time.</p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Trading is a skill that takes years
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Trading is a skill that takes years
                         to
                         master.</p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Human emotions get in the way of
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>Human
+                        emotions get in the way of
                         consistent performance.</p>
-                    <p><i class="fa fa-check check-icon" aria-hidden="true"></i>Current Trading Robot options are
+                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Current Trading Robot options are
                         hard
                         to operate and understand
                         without a tech background.</p>
