--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -13,6 +12,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
 
     <title>Shaman Trends</title>
@@ -131,21 +131,21 @@
                     <h6>The Risk</h6>
                     <h2>Trading on your own is Challenging</h2>
 
-                    <p class="d-flex align-items-center">
+                    <p class="d-md-flex align-items-md-center">
                         <i class="fa fa-times window-close-icon" aria-hidden="true"></i>
                         Cryptocurrencies are extremely volatile.
                     </p>
-                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
                             aria-hidden="true"></i>“Buy and Hold" investing
                         strategies lead to major portfolio
                         crashes over time.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
                             aria-hidden="true"></i>Trading is a skill that takes
                         years to master.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
                             aria-hidden="true"></i>Human emotions get in the way of
                         consistent performance.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-times window-close-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
                             aria-hidden="true"></i>Current Trading Robot options are
                         hard to operate and understand
                         without a tech background.</p>
@@ -164,20 +164,22 @@
                     <h6>Our benefits</h6>
                     <h2>Automated Crypto Trading for Everyone</h2>
 
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
                             aria-hidden="true"></i>Cryptocurrencies are extremely volatile.
                     </p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>“Buy
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>“Buy
                         and Hold" investing strategies lead
                         to major portfolio
                         crashes over time.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
                             aria-hidden="true"></i>Trading is a skill that takes years to
                         master.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>Human
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Human
                         emotions get in the way of
                         consistent performance.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
                             aria-hidden="true"></i>Current Trading Robot options are hard
                         to operate and understand
                         without a tech background.</p>
@@ -198,23 +200,25 @@
                 <div class="col-md-8">
                     <h2>How Shaman Trends Works</h2>
 
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
                             aria-hidden="true"></i>Cryptocurrencies are extremely
                         volatile.
                     </p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>“Buy
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>“Buy
                         and Hold" investing strategies
                         lead
                         to major portfolio
                         crashes over time.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
                             aria-hidden="true"></i>Trading is a skill that takes years
                         to
                         master.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon" aria-hidden="true"></i>Human
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
+                            aria-hidden="true"></i>Human
                         emotions get in the way of
                         consistent performance.</p>
-                    <p class="d-flex align-items-center"><i class="fa fa-check check-icon"
+                    <p class="d-md-flex align-items-md-center"><i class="fa fa-check check-icon"
                             aria-hidden="true"></i>Current Trading Robot options are
                         hard
                         to operate and understand
@@ -591,8 +595,10 @@
                 <div class="col-md-3">
                     <div class="review-card">
                         <div class="review-text">
-                            <p>“I lost a big chunk of my savings trying to trade on my own for the past 3 years. Finding
-                                Shaman Trends was exactly what I needed, now I'm focusing on my other projects while my
+                            <p>“I lost a big chunk of my savings trying to trade on my own for the past 3 years.
+                                Finding
+                                Shaman Trends was exactly what I needed, now I'm focusing on my other projects while
+                                my
                                 investments are automated, and thankfully growing! Thank you! “</p>
                         </div>
                         <div class="author">
@@ -604,7 +610,8 @@
                 <div class="col-md-3">
                     <div class="review-card">
                         <div class="review-text">
-                            <p>“I've always been intrigued by Crypto, but I had no idea how to invest and frankly didn't
+                            <p>“I've always been intrigued by Crypto, but I had no idea how to invest and frankly
+                                didn't
                                 have the time to learn. It was super easy to setup my accounts and Shaman Trends
                                 Strategies. The team is always on Discord answering any questions I might have. I'm
                                 excited to see my portfolio grow in the long term! “</p>
@@ -618,8 +625,10 @@
                 <div class="col-md-3">
                     <div class="review-card">
                         <div class="review-text">
-                            <p>“I have 3 businesses and wanted an easy way to get invested in Bitcoin without spending
-                                too much time on it. I believe they made a great product and on the past 7 months, I've
+                            <p>“I have 3 businesses and wanted an easy way to get invested in Bitcoin without
+                                spending
+                                too much time on it. I believe they made a great product and on the past 7 months,
+                                I've
                                 already seen my investments beat the market. I couldn't ask for more. “</p>
                         </div>
                         <div class="author">
@@ -630,6 +639,7 @@
                 </div>
 
             </div>
+
             <div class="row d-flex justify-content-center">
                 <div class="col-md-3 col-12">
                     <button class="btn btn-style btn-review">Try Shaman Trends for free</button>
@@ -846,21 +856,12 @@
         </div>
     </footer>
     <!-- footer section end -->
-
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- bootstrap links  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+
 </body>
 
 </html>
