--- a/index.html
+++ b/index.html
@@ -22,9 +22,26 @@
     <!-- header section start -->
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
+            <div class="container-fluid mobile-nav-design">
                 <!-- logo here -->
-                <a class="navbar-brand" href="#"><img src="images/Logo.png" alt="Shaman Trends"></a>
+                <a class="navbar-brand logo" href="#"><img src="images/Logo.png" alt="Shaman Trends"></a>
+
+                <!-- right side social icon only-for-mobile-version-->
+                <div class="only-for-mobile-version social-top-margin">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item social-icon">
+                            <a class="nav-link" aria-current="page" href="#">
+                                <i class='fab fa-twitter'></i>
+                            </a>
+                        </li>
+                        <li class="nav-item social-icon">
+                            <a class="nav-link" aria-current="page" href="#">
+                                <i class='fab fa-discord'></i>
+
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <!-- toggler button for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
