fix responsive issues

--- a/index.html
+++ b/index.html
@@ -554,9 +554,9 @@
                     <h2>Meet the Team</h2>
                 </div>
             </div>
-            <div class="row mt-5 d-flex justify-content-center">
-                <div class="col-md-3 col-10 mx-3 mb-5">
-                    <div class="card border-0" style="width: 18rem;">
+            <div class="row mt-5 d-md-flex justify-content-md-center">
+                <div class="col-md-3 col-12 mx-md-3 mb-5">
+                    <div class="card border-0">
                         <img src="images/image 12.png" class="card-img-top" alt="team member">
                         <div class="card-body card-body-style">
                             <h5 class="card-title card-title-style">Guillaume Hucheloup</h5>
@@ -568,8 +568,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-10 mx-3 mb-5">
-                    <div class="card border-0" style="width: 18rem;">
+                <div class="col-md-3 col-12 mx-md-3 mb-5">
+                    <div class="card border-0">
                         <img src="images/Yael-Fazy-1b-square-web 1.png" class="card-img-top" alt="team member">
                         <div class="card-body card-body-style">
                             <h5 class="card-title card-title-style">Yaël Fazy</h5>
@@ -581,8 +581,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-10 mx-3 mb-5">
-                    <div class="card border-0" style="width: 18rem;">
+                <div class="col-md-3 col-12 mx-md-3 mb-5">
+                    <div class="card border-0">
                         <img src="images/image 13.png" class="card-img-top" alt="team member">
                         <div class="card-body card-body-style">
                             <h5 class="card-title card-title-style">Neil Gursahani</h5>
