--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
 
                     <p class="d-md-flex align-items-md-center">
                         <i class="fa fa-times window-close-icon" aria-hidden="true"></i>
-                        Cryptocurrencies are extremely volatile.
+                        <span>Cryptocurrencies are extremely volatile.</span>
                     </p>
                     <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
-                            aria-hidden="true"></i>“Buy and Hold" investing
-                        strategies lead to major portfolio
-                        crashes over time.</p>
+                            aria-hidden="true"></i><span>“Buy and Hold" investing
+                            strategies lead to major portfolio
+                            crashes over time.</span></p>
                     <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
                             aria-hidden="true"></i>Trading is a skill that takes
                         years to master.</p>
@@ -293,7 +293,7 @@
                                 <p class="warning-color">-20,7%</p>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 mt-1">
                             <p>Buy and hold etherum</p>
                             <p>Profit</p>
                             <p class="warning-color">-30,7%</p>
@@ -309,7 +309,7 @@
                                 <p class="warning-color">-20,7%</p>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 mt-1">
                             <p>Buy and hold etherum</p>
                             <p>Profit</p>
                             <p class="warning-color">-30,7%</p>
@@ -657,11 +657,10 @@
 
             </div>
 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-3 col-12">
-                    <button class="btn btn-style btn-review">Try Shaman Trends for free</button>
-                </div>
+            <div class="row d-md-flex justify-content-md-center">
+                <button class="col-md-3 col-12 btn btn-style btn-review">Try Shaman Trends for free</button>
             </div>
+
         </div>
     </section>
     <!-- review section end -->
