--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
 
                     <p class="d-md-flex align-items-md-center">
                         <i class="fa fa-times window-close-icon" aria-hidden="true"></i>
-                        <span>Cryptocurrencies are extremely volatile.</span>
+                        Cryptocurrencies are extremely volatile.
                     </p>
                     <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
-                            aria-hidden="true"></i><span>“Buy and Hold" investing
-                            strategies lead to major portfolio
-                            crashes over time.</span></p>
+                            aria-hidden="true"></i>“Buy and Hold" investing
+                        strategies lead to major portfolio
+                        crashes over time.</p>
                     <p class="d-md-flex align-items-md-center"><i class="fa fa-times window-close-icon"
                             aria-hidden="true"></i>Trading is a skill that takes
                         years to master.</p>
