work records adding

--- a/index.html
+++ b/index.html
@@ -241,6 +241,40 @@
                         without a tech background.</p>
                 </div>
             </div>
+            <div class="work-records only-for-desktop-version">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <p class="p-f-design">5Y</p>
+                                <p class="p-s-design">Track records</p>
+                            </div>
+                            <div class="col-md-3">
+                                <p class="p-f-design">10631%</p>
+                                <p class="p-s-design">BTC perf. 5Y</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <p class="p-f-design">25%</p>
+                                <p class="p-s-design">5Y max drawdown</p>
+                            </div>
+                            <div class="col-md-3">
+                                <p class="p-f-design">500+</p>
+                                <p class="p-s-design">Backtested trades</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
         </div>
     </section>
     <!-- work section end -->
